config/dashboard/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: klone-dashboard
  namespace: klone
  labels:
    app: klone-dashboard
spec:
  replicas: 1
  selector:
    matchLabels:
      app: klone-dashboard
  template:
    metadata:
      labels:
        app: klone-dashboard
    spec:
      serviceAccountName: klone-controller-manager
      containers:
      - name: dashboard
        image: raghavendiran2002/klone-dashboard:v1.0.17
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
          name: http
        resources:
          limits:
            cpu: 500m
            memory: 256Mi
          requests:
            cpu: 100m
            memory: 128Mi
---
apiVersion: v1
kind: Service
metadata:
  name: klone-dashboard
  namespace: klone
  labels:
    app: klone-dashboard
spec:
  type: ClusterIP
  selector:
    app: klone-dashboard
  ports:
  - port: 80
    targetPort: http
    protocol: TCP
    name: http

# ---
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: klone-dashboard
#   namespace: klone
# spec:
#   ingressClassName: tailscale
#   defaultBackend:
#     service:
#       name: klone-dashboard
#       port:
#         name: http
#   tls:
#   - hosts:
#     - klone-dashboard
